--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     url : "http://iphdata.lequipe.fr/iPhoneDatas/EFR/STD/ALL/V2/home.json"
                 }).success(function (data) {
                     console.log(data);
+                    $("#data").empty();
                     for (var i=0; i<data.articles.length;i++) {
                         $("#data").append("<tr><td>"+data.articles[i].titre+"</td><td>"+data.articles[i].texte+"</td></tr>")
                     }
